{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 18,
  "lineage": "1b467003-e9b9-cce2-f2a9-1c43dc2fa952",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wordpress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04ab94c703fb30101",
            "arn": "arn:aws:ec2:us-east-1:851725328185:instance/i-025b55a9c668bf4a9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-025b55a9c668bf4a9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "codio-deployer-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06e06f7016fbec28e",
            "private_dns": "ip-10-0-1-239.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.239",
            "public_dns": "ec2-54-89-199-145.compute-1.amazonaws.com",
            "public_ip": "54.89.199.145",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06587fd6717d16aee",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06f292624c834bc2c",
            "tags": {
              "Name": "Codio Terraform Demo"
            },
            "tags_all": {
              "Name": "Codio Terraform Demo"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04cec63f6dcce2682"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_security_group.database",
            "aws_security_group.wordpress",
            "aws_subnet.main",
            "aws_subnet.second",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.template_file.wordpress_user_data",
            "module.database.module.db_instance.aws_cloudwatch_log_group.this",
            "module.database.module.db_instance.aws_db_instance.this",
            "module.database.module.db_instance.aws_iam_role.enhanced_monitoring",
            "module.database.module.db_instance.random_id.snapshot_identifier",
            "module.database.module.db_option_group.aws_db_option_group.this",
            "module.database.module.db_parameter_group.aws_db_parameter_group.this",
            "module.database.module.db_subnet_group.aws_db_subnet_group.this",
            "module.database.random_password.master_password"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725328185:internet-gateway/igw-034c0cf40691439e4",
            "id": "igw-034c0cf40691439e4",
            "owner_id": "851725328185",
            "tags": {
              "Name": "Codio Terraform Demo"
            },
            "tags_all": {
              "Name": "Codio Terraform Demo"
            },
            "vpc_id": "vpc-06d528b1143bc660e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "crt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725328185:route-table/rtb-0354c8c3bdf85ffed",
            "id": "rtb-0354c8c3bdf85ffed",
            "owner_id": "851725328185",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-034c0cf40691439e4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Codio Terraform Demo"
            },
            "tags_all": {
              "Name": "Codio Terraform Demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d528b1143bc660e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0972c488cac6d9bcc",
            "route_table_id": "rtb-0354c8c3bdf85ffed",
            "subnet_id": "subnet-06f292624c834bc2c"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.crt",
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0016e847a4a6c290a",
            "route_table_id": "rtb-0354c8c3bdf85ffed",
            "subnet_id": "subnet-0dee6cdd950e4dff8"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.crt",
            "aws_subnet.second",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725328185:security-group/sg-0905d8f89c24048cb",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0905d8f89c24048cb",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.2.0/24"
                ],
                "description": "Mysql from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "allow database connection",
            "name_prefix": "",
            "owner_id": "851725328185",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Codio Terraform Demo"
            },
            "tags_all": {
              "Name": "Codio Terraform Demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d528b1143bc660e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.main",
            "aws_subnet.second",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wordpress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725328185:security-group/sg-04cec63f6dcce2682",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04cec63f6dcce2682",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from Everywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh from Everywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow instance connection",
            "name_prefix": "",
            "owner_id": "851725328185",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Codio Terraform Demo"
            },
            "tags_all": {
              "Name": "Codio Terraform Demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d528b1143bc660e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725328185:subnet/subnet-06f292624c834bc2c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06f292624c834bc2c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "851725328185",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Codio Terraform Demo"
            },
            "tags_all": {
              "Name": "Codio Terraform Demo"
            },
            "vpc_id": "vpc-06d528b1143bc660e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "second",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725328185:subnet/subnet-0dee6cdd950e4dff8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dee6cdd950e4dff8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "851725328185",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Codio Terraform Demo"
            },
            "tags_all": {
              "Name": "Codio Terraform Demo"
            },
            "vpc_id": "vpc-06d528b1143bc660e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725328185:vpc/vpc-06d528b1143bc660e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0033734a0233a9a5a",
            "default_route_table_id": "rtb-0c42aee3434b95099",
            "default_security_group_id": "sg-0bda0f5d0af0bb028",
            "dhcp_options_id": "dopt-05b9127d5b7bfb244",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06d528b1143bc660e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c42aee3434b95099",
            "owner_id": "851725328185",
            "tags": {
              "Name": "Codio Terraform Demo"
            },
            "tags_all": {
              "Name": "Codio Terraform Demo"
            }
          }
        }
      ]
    }
  ]
}